<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jobshunter</groupId>
    <artifactId>jobshunter-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>jobshunter-parent</name>
    <description>Parent POM for jobshunter modules</description>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <spring.boot.version>4.0.0</spring.boot.version>
        <resilience4j.version>2.3.0</resilience4j.version>
        <spring.web>7.0.1</spring.web>
        <joackson.databind>2.20.1</joackson.databind>
        <lombok.version>1.18.42</lombok.version>
        <slf4j.version>2.0.13</slf4j.version>
        <liquibase.version>4.33.0</liquibase.version>
        <mysql.version>8.3.0</mysql.version>
        <jjwt.version>0.11.5</jjwt.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>annotation-processor</module>
        <module>application</module>
    </modules>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>
</project>


